Get mongodb connection string from .env file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - MONGODB_CONNECTION_STRING=mongodb://mongo/mongodb
+      - MONGODB_CONNECTION_STRING=${MONGODB_CONNECTION_STRING}
     ports:
       - 3000:3000
       - 35729:35729
