--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - MONGODB_CONNECTION_STRING=${MONGODB_CONNECTION_STRING}
+      # - MONGODB_CONNECTION_STRING=mongodb://mongo/fe108
     ports:
       - 3000:3000
       - 35729:35729
