--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,52 @@
 version: '3'
 services:
-  app:
-    image: sose-sw207
+  frontend:
+    image: frontend
     build:
-      context: .
+      context: frontend
+      dockerfile: Dockerfile
+    ports:
+      - 8080
+    expose:
+      - 5173
+    volumes:
+      - ./frontend/src:/app/src
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.frontend.rule=Host(`bungaa.localhost`)
+      - traefik.http.routers.frontend.entrypoints=web
+  backend:
+    image: backend
+    build:
+      context: backend
       dockerfile: Dockerfile
     environment:
       - MONGODB_CONNECTION_STRING=${MONGODB_CONNECTION_STRING}
       # - MONGODB_CONNECTION_STRING=mongodb://mongo/fe108
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.backend.rule=(Host(`bungaa.localhost`) && PathPrefix(`/api`))
+      - traefik.http.routers.backend.entrypoints=web
     ports:
-      - 3000:3000
+      - 4444:4444
       - 35729:35729
     volumes:
-      - ./src:/app/src
-      - ./test:/app/test
+      - ./backend/src:/app/src
+      - ./backend/test:/app/test
   mongo:
     image: mongo
     ports:
       - 27019:27017
+  load-balancer:
+    container_name: load-balancer
+    image: traefik:v2.7
+    command: 
+      - --api.insecure=true
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
+      - --entrypoints.web.address=:80
+    ports:
+      - 80:80
+      - 8083:8080
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
